--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 html, body {
-	height: 100%;
+	height: calc(100% - 1rem);
+    max-height: calc(100% - 1rem);
 	width: 100%;
+    overflow: hidden;
 	padding: 0;
 	margin: 0;
 	background: #FAFAFA;
