--- a/docs/ssr-build/ssr-bundle.3ad8b.css
+++ b/docs/ssr-build/ssr-bundle.3ad8b.css
@@ -13,13 +13,27 @@ html, body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+@media (prefers-color-scheme: dark) {
+    html, body, input {
+        background: #292A2D;
+        color: #A9A9B3
+    }
+}
+
 * {
 	box-sizing: border-box;
 }
 
 #app {
 	height: 100%;
+    position: relative;
+}
+
+#custom-container {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
 }
 
 
-/*# sourceMappingURL=ssr-bundle.003cc.css.map*/
+/*# sourceMappingURL=ssr-bundle.3ad8b.css.map*/
